Arreglando algunos errores

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons&family=Roboto:wght@300;400;500;700&family=Rubik:wght@300;400;500;700&display=swap">
   <link rel="stylesheet" href="bundle.css">
   <!--<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>-->
+  <meta name="robots" content="index, follow">
 </head>
 <body class="app-body" style="color: var(--mdc-theme-primary, #fedbd0)">
   <aside class="mdc-drawer app-drawer">
@@ -76,8 +77,13 @@
         <img class="mdc-image-list__image" src="assets/ginger-scarf.jpg">
         <div class="mdc-image-list__supporting">
           <div class="product-badge__container">
-            <div class="product-badge__badge">
+            <div class="product-badge__badge" aria-describedby="badge-one-tooltip">
               <i class="material-icons" aria-hidden="true">shopping_cart</i>
+            </div>
+            <div id="badge-one-tooltip" class="mdc-tooltip" role="tooltip" aria-hidden="true">
+              <div class="mdc-tooltip__surface mdc-tooltip__surface-animation">
+                Bufanda
+              </div>
             </div>
           </div>
           <span class="mdc-image-list__label">Ginger scarf</span>
@@ -196,6 +202,6 @@
       <p class="browsehappy-p">Esta utilizando un navegador <strong>desactualizado</strong>. Por favor, <a href="#">actualice su navegador</a> para mejorar su experiencia.</p>
     </div>
   <![endif]-->
-  <script src="bundle-login.js" async></script>
+  <script src="app.js" type="module text/javascript" async></script>
 </body>
 </html>
